# becode

./: .gitignore  Cargo.toml  README-DESKTOP.md  README.md
.github/workflows/: build-desktop.yml  build.yml  release.yml
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/bee/: BeeLogo.tsx
frontend/src/components/chat/: ChatMessage.tsx  ChatPanel.tsx  MessageInput.tsx  ToolCard.tsx  TypingIndicator.tsx
frontend/src/components/common/: CodeBlock.tsx  CommandPalette.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/components/settings/: SettingsModal.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/store/: chatStore.ts  fileTreeStore.ts  index.ts  sessionStore.ts  settingsStore.ts  uiStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  file.rs  mod.rs  session.rs  settings.rs
src/agent/: mod.rs  parser.rs  recovery.rs  runtime.rs
src/attachments/: file.rs  image.rs  mod.rs
src/config/: mod.rs  secrets.rs
src/permissions/: enforcer.rs  mod.rs  policy.rs
src/providers/: anthropic.rs  gemini.rs  mistral.rs  mod.rs  openai.rs  openai_compatible.rs  openai_compatible_no_tools.rs  openrouter.rs  traits.rs
src/session/: compaction.rs  mod.rs  storage.rs
src/tools/: bash.rs  edit_file.rs  glob_search.rs  grep_search.rs  mod.rs  read_file.rs  registry.rs  task_track.rs  traits.rs  web_fetch.rs  web_search.rs  write_file.rs
src/tui/: app.rs  events.rs  mascot.rs  mod.rs  themes.rs
src/tui/widgets/: chat.rs  file_tree.rs  header.rs  input.rs  mod.rs  status.rs  tool_card.rs
src/utils/: diff.rs  mod.rs  path.rs
