[package]
name = "becode"
version = "2.0.0"
edition = "2021"
authors = ["BeCode Contributors"]
description = "BeCode - Autonomous AI coding agent with beautiful TUI"
readme = "README.md"
license = "MIT"
keywords = ["ai", "coding", "agent", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "becode"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# File operations
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
walkdir = "2"
glob = "0.3"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image/attachment handling
base64 = "0.22"
mime_guess = "2"

# Diff generation
similar = "2"

# Random (for mascot phrases)
rand = "0.8"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
mockall = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
